# Prog4-DigDug

./: CMakeLists.txt  EXPOSE_TO_EDITOR_GUIDE.md  README.md  TODO.md
.github/workflows/: cmake.yml  emscripten.yml
ComponentPrecompiler/: CMakeLists.txt  ComponentParser.cpp  ComponentParser.h  main.cpp
Data/: GameScene.mbin  GameScene_Coop.mbin  HighScore.mbin  HighSubmitScene.mbin  MainMenu.mbin  Scores.txt  TestScene.mbin  scene.mbin
Data/terrain/: level0.tdbin  level0.tdbin.bak  level1.tdbin  level2.tdbin
Game/: CMakeLists.txt
Game/include/: ComponentRegistration.h  GameComponentRegistration.h  GameManager.h  StateHelper.h  TerrainGridLevelLoader.h
Game/include/Commands/: AttackCommand.h  CancelCommand.h  FrameCounterCommand.h  MainMenuMovementCommand.h  MenuSubmit.h  MoveIntentCommand.h  NameSelectorConfirmCommand.h  NameSelectorHorizontalCommand.h  NameSelectorVerticalCommand.h
Game/include/Components/: EnemyComponent.h  FireComponent.h  HighScoreComponent.h  LivesDisplayComponent.h  MenuCursorComponent.h  NameSelectorComponent.h  ObjectMoveComponent.h  PlayerControllerComponent.h  PumpComponent.h  RockComponent.h  ScoreComponent.h  SpinnerComponent.h  TerrainGridComponent.h
Game/include/Components/EnemyStates/: EnemyFireState.h  EnemyGhost.h  EnemyIdle.h  EnemyPop.h  EnemyPumped.h  EnemyState.h  EnemyWander.h
Game/include/Components/PlayerStates/: PlayerAttack.h  PlayerDead.h  PlayerDig.h  PlayerIdle.h  PlayerMove.h  PlayerPumping.h  PlayerStart.h  PlayerState.h
Game/src/: GameComponentRegistration.cpp  GameManager.cpp  Main.cpp  TerrainGridLevelLoader.cpp
Game/src/Commands/: AttackCommand.cpp  CancelCommand.cpp  FrameCounterCommand.cpp  MainMenuMovementCommand.cpp  MenuSubmit.cpp  MoveIntentCommand.cpp  MovementInputCommand.cpp
Game/src/Components/: EnemyComponent.cpp  FireComponent.cpp  HighScoreComponent.cpp  LivesDisplayComponent.cpp  MenuCursorComponent.cpp  NameSelectorComponent.cpp  ObjectMoveComponent.cpp  PlayerControllerComponent.cpp  PumpComponent.cpp  RockComponent.cpp  ScoreComponent.cpp  SpinnerComponent.cpp  TerrainGridComponent.cpp
Game/src/Components/EnemyStates/: EnemyFireState.cpp  EnemyGhost.cpp  EnemyIdle.cpp  EnemyPop.cpp  EnemyPumped.cpp  EnemyWander.cpp
Game/src/Components/PlayerStates/: PlayerAttack.cpp  PlayerDead.cpp  PlayerDig.cpp  PlayerIdle.cpp  PlayerMove.cpp  PlayerPumping.cpp  PlayerStart.cpp
Minigin/: CMakeLists.txt  ComponentFactoryRegistry.cpp  ComponentFactoryRegistry.h  ComponentRegistration.cpp  Debugger.cpp  Debugger.h  EventManager.cpp  EventManager.h  GameObject.cpp  GameObject.h  Hash.h  InputManager.cpp  InputManager.h  Main.cpp  Minigin.cpp  Minigin.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  SceneManager.cpp  SceneManager.h  SteamManager.cpp  SteamManager.h  TextObject.cpp  TextObject.h  Timing.cpp  Timing.h
Minigin/Commands/: AddScoreCommand.cpp  AddScoreCommand.h  AxisCommand.h  AxisComponentCommand.h  Command.h  ComponentCommand.h  MovementInputCommand.cpp  MovementInputCommand.h  PlayerDeathCommand.cpp  PlayerDeathCommand.h
Minigin/Components/: Component.cpp  Component.h  FPSCounterComponent.cpp  FPSCounterComponent.h  HealthComponent.cpp  HealthComponent.h  LivesDisplayComponent.cpp  LivesDisplayComponent.h  ObjectMoveComponent.cpp  ObjectMoveComponent.h  PointsDisplayComponent.cpp  PointsDisplayComponent.h  RenderComponent.cpp  RenderComponent.h  ScoreComponent.cpp  ScoreComponent.h  SpinnerComponent.cpp  SpinnerComponent.h  SwappableRenderComponent.cpp  SwappableRenderComponent.h  SwappableRenderer.cpp  SwappableRenderer.h  TextRendererComponent.cpp  TextRendererComponent.h  TextureRendererComponent.cpp  TextureRendererComponent.h  TransformComponent.cpp  TransformComponent.h
Minigin/Controller/: ControllerManager.cpp  ControllerManager.h  ControllerManager_SDL.cpp  ControllerManager_XInput.cpp  GamepadButton.h
Minigin/Sound/: SoundSerivceLocator.cpp  SoundSerivceLocator.h  SoundSystem.h  SoundSystem_Debug.h  SoundSystem_SDL.cpp  SoundSystem_SDL.h
Shared/: CMakeLists.txt
Shared/include/: ComponentData.h  ComponentTypeMap.h  Config.h  GamepadButton.h  Hash.h  InputBindingData.h  MBINSerializer.h  SceneData.h  SceneDeserializer.h
Shared/src/: MBINSerializer.cpp  SceneDeserializer.cpp
editor/: CMakeLists.txt  EditorComponentData.h  EditorScene.cpp  EditorScene.h  EditorSerialization.cpp  EditorSerialization.h  EditorUI.cpp  EditorUI.h  InputBindingEditor.cpp  InputBindingEditor.h  MBIN_BINARY_FORMAT.md  MBIN_FORMAT.md  Main.cpp  PropertyEditor.cpp  PropertyEditor.h  SceneViewport.cpp  SceneViewport.h
editor/gencomponents/: .gitignore  README.md
tdeditor/: editor.py
